Корректировки по результатам проверки